Updated templates and corrected responsive layout issue.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -101,7 +101,8 @@ div.login {
     border: 1px solid @midGrey;
     margin: 0 auto;
     margin-top: 100px;
-    width: 320px;
+    width: 100%;
+    max-width: 320px;
     font-family: @serifFontFamily;
     font-weight: 400;
 }
